--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,7 +67,7 @@
             登録してからご利用いただけます。
         </div>
         <script>
-            const post = document.getElementById('post');
+            const post = document.getElementById('map');
             const mypage = document.getElementById('mypage');
             const auth = document.getElementById('auth');
 
