--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
 <body>
     <div class="first">
         <img src="../upload/umi.jpg" class="umi">
-        <h1 class="index-title century">Ohitorisama</h1>
-        <p class="dis">一人旅共有サービス</p>
+        <h1 class="index-title century">MyMap</h1>
+        <p class="dis">自分だけの世界地図</p>
     </div>
     <div class="session">
         <h2 class="century"><span>Register/Login</span></h2>
