--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <!-- faviconの設定 -->
     <link href="/upload/favicon.ico" rel="icon">
 
-    <link href="styles.css" rel="stylesheet">
+    <link href="../upload/styles.css" rel="stylesheet">
     <title>MyMap</title>    
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ohitoriapp.herokuapp.com/" />
