--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <h1 class="title">Ohitorisama</h1>
+    <h1 class="title">My Map</h1>
     <form action="/login" method="post">
         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
         <div class="mb-3">
