--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 <body>
     <div class="first">
         <img src="../upload/umi.jpg" class="umi">
-        <h1 class="index-title century">MyMap</h1>
+        <h1 class="index-title century">My  Map</h1>
         <p class="dis">自分だけの世界地図</p>
     </div>
     <div class="session">
@@ -36,19 +36,19 @@
     </div>
     <div class="session">
         <h2 class="century"><span>Discription</span></h2>
-        <p>このサービスは一人で出かけたことを</p>
-        <p>共有、記録することができます。</p>
-        <p>一人で出かけたその記録、</p>
-        <p>共有しませんか？</p>
+        <p>このサービスはMapに自由に書き込むことで</p>
+        <p>自分なりの地図を作成できます。</p>
+        <p>いつも行くお店・たまに行く場所</p>
+        <p>自由に書き込んで、自分だけの地図を作ってみませんか？</p>
         <p>少しサービスを覗いてみましょう。</p>
-        <a href="/home" role="button" class="btn btn-success">覗いてみる</a>
+        <a href="/map" role="button" class="btn btn-success">覗いてみる</a>
     </div>
     <div class="session">
         <h2 class="century"><span>News</span></h2>
         <p>2022/10/01 サービスをプレリリースしました</p>
     </div>
     <footer class="mb-5 small text-center text-muted">
-        &copy; 2022 aoki
+        &copy; 2023 aoki
     </footer>
 </body>
 </html>
