--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,9 +10,12 @@
         <!-- http://getbootstrap.com/docs/5.1/ -->
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
+        <!-- ajax -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+        
         <!-- faviconの設定 -->
         <link href="./upload/favicon.ico" rel="icon">
-
         <link href="./upload/styles.css" rel="stylesheet">
         <meta property="og:type" content="article" />
         <!--
@@ -21,7 +24,8 @@
         -->
         <meta property="og:site_name" content="My Map" />
         <meta property="og:description" content="自分だけの世界地図" />
-
+        {% block head %}
+        {% endblock %}
         <title>My Map: {% block title %}{% endblock %}</title>
 
     </head>
