--- a/templates/map.html
+++ b/templates/map.html
@@ -1,9 +1,121 @@
 {% extends "layout.html" %}
+{% block head %}
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+    <meta name="csrf-token" content="{{ csrf_token() }}">
+{% endblock %}
 
 {% block title %}
     Map
 {% endblock %}
 
 {% block main %}
+<div class="mb-3">
+    <p>地域選択</p>
+    <select name="pre">
+        <option value="36.000850616844694, 137.9999356269849">日本</option>
+        <option value="43.46722, 142.8278">北海道</option>
+        <option value="40.78028, 140.8319">青森</option>
+        <option value="39.59139, 141.3625">岩手</option>
+        <option value="38.44556, 140.9281">宮城</option>
+        <option value="39.7475, 140.4086">秋田</option>
+        <option value="38.44639, 140.1028">山形</option>
+        <option value="37.37889, 140.2253">福島</option>
+        <option value="36.30639, 140.3186">茨城</option>
+        <option value="36.68917, 139.8192">栃木</option>
+        <option value="36.50389, 138.9853">群馬</option>
+        <option value="35.99667, 139.3478">埼玉</option>
+        <option value="35.51278, 140.2039">千葉</option>
+        <option value="35.01833, 139.5986">東京</option>
+        <option value="35.41417, 139.3403">神奈川</option>
+        <option value="36.13, 138.0439">長野</option>
+        <option value="35.7775, 137.055">岐阜</option>
+        <option value="35.03444, 137.215">愛知</option>
+        <option value="34.62278, 135.5111">大阪</option>
+        <option value="35.25194, 135.4458">京都</option>
+        <option value="33.5225, 130.6681">福岡</option>
+        <option value="25.77111, 126.64">沖縄</option>
+    </select>
+</div>
+<!-- map表示域 -->
+<div id="map" style="width:100%; height:500px"></div>
+<script>
+    // 初期の表示状態
+    const map = L.map('map').setView([36.000850616844694, 137.9999356269849], 5);
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(map);
+    L.marker([36.36946463797535, 138.22353136256697]).addTo(map)
+        .bindPopup('長野大学')
+        .openPopup();
+    
+    // プルダウンで表示の変更
+    // マップピンの書き込みが必要
+    let view = document.querySelector('[name="pre"]');
+    view.onchange = event => {
+        const coordi = event.target.value;
+        lat = coordi.substr(0, coordi.indexOf(','))
+        lng = coordi.substr(coordi.indexOf(',') + 1)
+        map.setView([lat, lng], 8);
+        L.marker([36.36946463797535, 138.22353136256697]).addTo(map)
+        .bindPopup('長野大学')
+        .openPopup();
+
+    };
+
+    var csrftoken = $('meta[name=csrf-token]').attr('content')
+    $.ajaxSetup({
+        beforeSend: function(xhr, settings) {
+            if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type)) {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken)
+            }
+        }
+    })
+    var marker_flag = false;
+
+    // ピンの追加
+    map.on('click', function(e) {
+        lat = e.latlng.lat;
+        lng = e.latlng.lng;
+        const text = prompt('メモを入力してください')
+        // 入力していない時・キャンセル押したときはピン指さない
+        if ((text === null) || (text === '')) {
+            ;
+        }else{
+            L.marker([lat, lng]).addTo(map)
+            .bindPopup(text)
+            .openPopup();
+            // formdataの作成
+            var fData = new FormData();
+            fData.append('lat', lat);
+            fData.append('lng', lng);
+            fData.append('text', text);
+            // オブジェクトに変換
+            fData = Object.fromEntries(fData.entries())
+            console.log(fData);
+            marker_flag = true;
+        }
+        
+
+        if (marker_flag === true){
+            $.ajax({
+                url : '/map',
+                type : 'POST',
+                data : JSON.stringify(fData),
+                dataType : "json",
+                processData : false,
+                contentType : "application/json"
+              })
+              .done(function(data){
+                $('#output').text(data.output).show();
+              });  
+        };
+    });
+
+</script>
 
 {% endblock %}
