--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,18 +14,18 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         
         <!-- faviconの設定 -->
-        <link href="./upload/favicon.ico" rel="icon">
+        <link href="./upload/favicon.png" rel="icon">
         <link href="./upload/styles.css" rel="stylesheet">
         <meta property="og:type" content="article" />
         <!--
             <meta property="og:url" content="https://ohitoriapp.herokuapp.com/" />
         <meta property="og:image" content="https://d.kuku.lu/419fd4cc1" />
         -->
-        <meta property="og:site_name" content="My Map" />
+        <meta property="og:site_name" content="Only Map" />
         <meta property="og:description" content="自分だけの世界地図" />
         {% block head %}
         {% endblock %}
-        <title>My Map: {% block title %}{% endblock %}</title>
+        <title>Only Map: {% block title %}{% endblock %}</title>
 
     </head>
 
@@ -33,7 +33,7 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand title century" href="/">My Map</a>
+                <a class="navbar-brand title century" href="/">Only Map</a>
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
