--- a/templates/index.html
+++ b/templates/index.html
@@ -7,19 +7,19 @@
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
     <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
     <!-- faviconの設定 -->
-    <link href="/upload/favicon.ico" rel="icon">
+    <link href="/upload/favicon.png" rel="icon">
 
     <link href="../upload/styles.css" rel="stylesheet">
-    <title>MyMap</title>    
+    <title>Only map</title>    
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://d.kuku.lu/419fd4cc1" />
-    <meta property="og:site_name" content="MyMap" />
+    <meta property="og:site_name" content="OnlyMap" />
     <meta property="og:description" content="自分だけの世界地図" />
 </head>
 <body>
     <div class="first">
         <img src="../upload/umi.jpg" class="umi">
-        <h1 class="index-title century">My  Map</h1>
+        <h1 class="index-title century">Only Map</h1>
         <p class="dis">自分だけの世界地図</p>
     </div>
     <div class="session">
@@ -42,7 +42,7 @@
     </div>
     <div class="session">
         <h2 class="century"><span>News</span></h2>
-        <p>2022/10/01 サービスをプレリリースしました</p>
+        <p></p>
     </div>
     <footer class="mb-5 small text-center text-muted">
         &copy; 2023 aoki
