--- a/templates/mypage.html
+++ b/templates/mypage.html
@@ -19,21 +19,20 @@
 
     {% if markers|length < 1 %}
         <p>投稿がありません</p>
+    {% else %}
+        <table class="table table-hover">
+            <tr>
+                <th>カテゴリー</th>
+                <th>登録日時</th>
+                <th>コメント</th>
+            </tr>
+            {% for marker in markers %}
+            <tr>
+                <td>{{ marker[3] }}</td>
+                <td>{{ marker[4] }}</td>
+                <td>{{ marker[2] }}</td>
+            </tr>
+            {% endfor %}
+        </table>
     {% endif %}
-
-    
-    <table class="table table-hover">
-        <tr>
-            <th>カテゴリー</th>
-            <th>登録日時</th>
-            <th>コメント</th>
-        </tr>
-        {% for marker in markers %}
-        <tr>
-            <td>{{ marker[3] }}</td>
-            <td>{{ marker[4] }}</td>
-            <td>{{ marker[2] }}</td>
-        </tr>
-        {% endfor %}
-    </table>
 {% endblock %}
